--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Data-Manager
 
 {{$NEXT}}
+
+0.09 Jul 21 2011
   - Convert to Dist::Zilla
   - Add results of a verify() to the message stack immediately, not at the
     time that verify is called.  Cleans up edge-cases and problems.  This
