--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Data-Manager
 
 {{$NEXT}}
+  - Added a scopes handler to return a list of all scopes that can be worked on
 
 0.10 Apr 11 2012
   - Bump Message::Stack::Parser dependency
